# kadima-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.toml
kadima_bench/: __init__.py  __main__.py  cli.py  config.py  runner.py
kadima_bench/backends/: __init__.py  base.py  ollama.py
kadima_bench/metrics/: __init__.py  aggregator.py  gpu_monitor.py  speed.py
kadima_bench/output/: __init__.py  schema.py
kadima_bench/suites/: __init__.py  base.py  kadima_custom.py  lm_eval_bridge.py
kadima_bench/visualize/: __init__.py  charts.py  theme.py
