[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kadima-bench"
version = "0.1.0"
description = "Open-source local LLM benchmarking framework combining custom tests, lm-eval-harness, and production inference metrics."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Kadima Digital Laboratories"},
]
keywords = ["llm", "benchmark", "ai", "local", "ollama", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pydantic>=2.0",
]

[project.optional-dependencies]
academic = ["lm-eval>=0.4", "datasets", "transformers"]
sglang = ["sglang>=0.5"]
all = ["kadima-bench[academic,sglang]"]

[project.scripts]
kadima-bench = "kadima_bench.cli:main"

[project.urls]
Homepage = "https://github.com/kadima-digital/kadima-bench"
Repository = "https://github.com/kadima-digital/kadima-bench"

[tool.setuptools.packages.find]
include = ["kadima_bench*"]
